Test with composite primary keys